WP-7473: add spacing, fix line-heights.

--- a/css/conditionals/exec-ed/ee-overview-detail.css
+++ b/css/conditionals/exec-ed/ee-overview-detail.css
@@ -380,6 +380,11 @@
 .node-program.view-mode-full .group-wrapper-featured-item .field-name-field-date {
   margin-bottom: 8px;
 }
+.node-program.view-mode-full .group-wrapper-featured-item .group-wrapper-title,
+.node-program.view-mode-full .group-wrapper-featured-item .field-name-title {
+  display: block;
+  margin-bottom: 12px;
+}
 .node-program.view-mode-full .group-wrapper-featured-item .group-wrapper-title h2,
 .node-program.view-mode-full .group-wrapper-featured-item .field-name-title h2 {
   font-size: 22px !important;
