--- a/sass/partials/base/04-defaults/_headers.sass
+++ b/sass/partials/base/04-defaults/_headers.sass
@@ -9,7 +9,7 @@
 
 %h1
   font-size: 48px
-  line-height: 56px
+  line-height: 1.2
   font-family: $font-demi
   font-weight: normal
   +breakpoint($bp-mobile-480)
@@ -20,31 +20,31 @@
   font-family: $font-sans
   font-size: 34px
   font-weight: bold
-  line-height: 40px
+  line-height: 1.2
 
 %h3
   font-family: $font-sans
   font-size: 26px
   font-weight: bold
-  line-height: 30px
+  line-height: 1.2
 
 %h4
   font-family: $font-sans
   font-size: 20px
   font-weight: bold
-  line-height: 26px
+  line-height: 1.3
 
 %h5
   font-family: $font-demi
   font-size: 18px
   font-weight: normal
-  line-height: 24px
+  line-height: 1.3
 
 %h6
   font-family: $font-demi
   font-size: 18px
   font-weight: normal
-  line-height: 24px
+  line-height: 1.3
 
 h1
   @extend %h1
